# rioring

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md
.github/workflows/: build_docker.yml  build_linux.yml  build_windows.yml
cpp/: io_buffer.cpp  io_service.cpp  socket_base.cpp  socket_object.cpp  tcp_server.cpp  tcp_socket.cpp
examples/chatclient/: CMakeLists.txt  main.cpp  scheme.h
examples/chatserver/: CMakeLists.txt  client.cpp  main.cpp  receiver.cpp  receiver.h
examples/echoserver/: CMakeLists.txt  main.cpp
examples/udpserver/: CMakeLists.txt  main.cpp
include/rioring/: address_resolver.h  buffer_base.h  io_buffer.h  io_context.h  io_service.h  object_base.h  socket_base.h  socket_object.h  tcp_server.h  tcp_socket.h  thread_object.h
src/: CMakeLists.txt  io_double_buffer.cpp  io_service.cpp  object_base.cpp  socket_object.cpp  tcp_server.cpp  tcp_socket.cpp  udp_server.cpp  udp_socket.cpp
src/include/: rioring.h
src/include/rioring/: address_resolver.h  io_context.h  io_service.h  predefined.h  simple_pool.h  socket_object.h  tcp_server.h  tcp_socket.h  udp_server.h  udp_socket.h
test/: CMakeLists.txt  basic_test.cpp
